[ci skip] chore: use jspecify nullability annotations instead of jetbrains